# OCR

./: CMakeLists.txt
include/: java_OCR.h  mhd_OCR.h  ocr_rec.h  utility.h
include/paddle/: paddle_analysis_config.h  paddle_api.h  paddle_infer_declare.h  paddle_inference_api.h
src/: main.cpp  ocr_rec.cpp  utility.cpp
src/demo/: main.cpp  ocr_rec.cpp
src/mhd/: mhd_OCR.cpp
src/paddle/: analysis_config.cc  analysis_predictor.cc
